# perception_framework

./: README.md  build.sh
modules/: CMakeLists.txt
modules/framework/: CMakeLists.txt  cached_data.h  dag.h  dag_streaming.cpp  dag_streaming.h  event.h  event_manager.cpp  event_manager.h  event_worker.cpp  event_worker.h  frame.cpp  frame.h  framework.h  gflags_define.cpp  op.cpp  op.h  operator.cpp  operator.h  param.h  port.cpp  port.h  processor.cpp  processor.h  register.cpp  shared_data.h  shared_data_manager.cpp  shared_data_manager.h
modules/framework/main/: CMakeLists.txt  execute.sh  framework_main.cpp
modules/framework/main/operator/test/: test_op.cpp  test_op.h  test_operator.cpp  test_operator.h
modules/framework/production/: CMakeLists.txt  dag_streaming.prototxt  dag_streaming_multiinput.prototxt  dag_streaming_multiop.prototxt
modules/framework/proto/: CMakeLists.txt  dag_config.proto  type.proto
modules/framework/tools/: CMakeLists.txt  vis_perception_dag.py
